<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.william.thereandback.MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_marginLeft="@dimen/Margin"
        android:layout_marginRight="@dimen/Margin"
        android:hint="@string/name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLastName"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:layout_marginLeft="@dimen/Margin"
        android:layout_marginRight="@dimen/Margin"
        android:hint="@string/last_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMonthOfBirth"
        app:layout_constraintTop_toBottomOf="@id/etLastName"
        android:layout_marginLeft="@dimen/Margin"
        android:layout_marginRight="@dimen/Margin"
        android:hint="@string/month_of_birth"
        android:inputType="number"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSeason"
        app:layout_constraintTop_toBottomOf="@id/etMonthOfBirth"
        android:layout_marginLeft="@dimen/Margin"
        android:layout_marginRight="@dimen/Margin"
        android:hint="@string/season"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFavoriteLecture"
        android:text="@string/android"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintTop_toBottomOf="@id/etSeason"
        android:layout_marginLeft="@dimen/Margin"
        android:layout_marginRight="@dimen/Margin"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btCalculate"
        app:layout_constraintTop_toBottomOf="@id/etFavoriteLecture"
        android:text="@string/calculate"
        android:layout_marginLeft="@dimen/Margin"
        android:layout_marginRight="@dimen/Margin"
        android:onClick="onClickCalculate"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btDetails"
        android:text="@string/details"
        app:layout_constraintTop_toBottomOf="@id/btCalculate"
        android:layout_marginLeft="@dimen/Margin"
        android:layout_marginRight="@dimen/Margin"
        android:onClick="onClickDetails"
        />

</android.support.constraint.ConstraintLayout>
